fixed index image alignment in firefox and ie

--- a/app/assets/stylesheets/students.css.sass
+++ b/app/assets/stylesheets/students.css.sass
@@ -7,4 +7,4 @@
 			img
 				width: 28px
 				height: 35px
-				position: absolute
+				vertical-align: bottom
